# codelab

./: .clang-format  README.md  main.cpp  mymake
base/: CMakeLists.txt  JasonLabConfig.h.in  codelab.hpp  main.cpp
base/algorithm/: CMakeLists.txt
base/algorithm/greedy/: CMakeLists.txt
base/algorithm/practice/: CMakeLists.txt  leet002.cpp  leet002.hpp  practice.cpp  practice.hpp
base/cpplab/: CMakeLists.txt
base/cpplab/callable/: CMakeLists.txt  callable.cpp  callable.hpp  foreach.cpp  foreach.hpp
base/cpplab/shape/: CMakeLists.txt  shape.cpp  shape.hpp  testshape.cpp
base/cpplab/smartptr/: CMakeLists.txt  sharedcount.hpp  smartptr.cpp  smartptr.hpp  uniptrsample.cpp  uniptrsample.hpp
base/cpplab/type/: CMakeLists.txt  typelab.cpp  typelab.hpp
base/datastruct/: CMakeLists.txt
base/datastruct/binarytree/: CMakeLists.txt  binarytree.cpp  binarytree.hpp
base/scripts/: CMakeLists.txt  monitor.sh
base/scripts/textplayer/: CMakeLists.txt  data.txt  textplayer.cpp  textplayer.hpp  textplayer.sh
base/userdata/: CMakeLists.txt  userdata.cpp  userdata.hpp
base/utils/: singleton.hpp
