SET(BINARY_TREE_LIB BinaryTree)

message ("CMAKE_CURRENT_SOURCE_DIR = ${CMAKE_CURRENT_SOURCE_DIR}")

AUX_SOURCE_DIRECTORY(${CMAKE_CURRENT_SOURCE_DIR} SOURCE_FILE )

ADD_LIBRARY(${BINARY_TREE_LIB} SHARED ${SOURCE_FILE})

# TARGET_LINK_LIBRARIES( ${BINARY_TREE_LIB}
#                        AosDomLagAppCmn)
